Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "State your null hypothesis here (be sure to make it quantitative as before)\n",
     "\n",
-    "h_0 : #Your null hypothesis"
+    "h_0 : 5% >= UA "
    ]
   },
   {
@@ -46,7 +46,8 @@
    "source": [
     "State your alternative hypothesis here (be sure to make it quantitative as before)\n",
     "\n",
-    "h_1 : #Your alternative hypothesis"
+    "h_1 : #Your alternative hypothesis\n",
+    "5% < UA"
    ]
   },
   {
@@ -63,11 +64,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the required sample size"
+    "from statsmodels.stats.power import TTestIndPower, TTestPower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "279.6667468021971"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samp = TTestIndPower()\n",
+    "a = .05\n",
+    "powr = .8\n",
+    "dmu = .01\n",
+    "sd = .0475\n",
+    "es = dmu/sd\n",
+    "\n",
+    "samp_sz = samp.solve_power(alpha=a, power=powr, effect_size=es, alternative='larger')\n",
+    "samp_sz\n"
    ]
   },
   {
@@ -130,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
