Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code; plot power curves for the various alpha and effect size combinations"
+    "#Your code; plot power curves for the various alpha and effect size combinations\n",
+    "\n"
    ]
   },
   {
