Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,8 @@
    "outputs": [],
    "source": [
     "#Your code; plot power curves for the various alpha and effect size combinations\n",
-    "\n"
+    "\n",
+    "for"
    ]
   },
   {
