Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "#Your code; plot power curves for the various alpha and effect size combinations\n",
     "\n",
-    "alpha_l = np.array([.01,])"
+    "alpha_l = np.array([.01, .05,])"
    ]
   },
   {
