Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
     "fig, axes = plt.subplots(ncols=1, nrows=3, figsize=(8,15))\n",
     "for n, alpha in enumerate([.01, .05, .1]):\n",
     "    ax = axes[n]\n",
-    "    power_analysis.plot_power(dep_var=\"nobs\",\n",
+    "    sa.plot_power(dep_var=\"nobs\",\n",
     "                              nobs = np.array(range(5,500)),\n",
     "                              effect_size=e_sizes,\n",
     "                              alpha=alpha,\n",
